tests/paczka1/small_fuzzy/31936512.err
Error in line 12: qoGTIZfq A49 84,0
Error in line 1: cOvwZw S802 90,4
